@startuml
title:中介者模式
abstract class Mediator
class ConcreteMediator{
    colleagueMap : HashMap
    getMessage() : void
}
ConcreteMediator --|>Mediator

abstract class Colleague{
    sendMessage():void
    getMediator():Mediator
}

class Alarm
class TV
class CoffeeMachine
class Curtain
Alarm --|> Colleague
TV --|> Colleague
CoffeeMachine --|> Colleague
Curtain --|> Colleague

Mediator -- Colleague
Colleague --o ConcreteMediator

Alarm ..> Mediator
TV ..> Mediator
CoffeeMachine ..> Mediator
Curtain ..> Mediator

class Client
Client ..> Mediator
Client ..> Colleague
@enduml